<resources>
    <string name="app_name">YuriHome</string>
    <string name="string_tv_comic_author">Author: %s</string>
    <string name="string_tv_comic_title">Title: %s</string>
    <string name="string_no_more_data">已经是最后一页了！</string>
    <string name="const_string_status_finished">已完结</string>
    <string name="string_menu_filter">Filter</string>
    <string name="string_menu_search">Search</string>
    <string name="string_filter_dialog_title">Filter</string>
    <string name="string_filter_dialog_apply">应用</string>
    <string name="string_dialog_filter_cancel">取消</string>
    <string name="string_classify_type_text">题材</string>
    <string name="string_classify_region_text">地域</string>
    <string name="string_classify_status_text">进度</string>
    <string name="string_classify_sort_text">排序</string>
    <string name="title_activity_comic_details">ComicDetailsActivity</string>
    <string name="string_comic_details_tags_text">标签：%s</string>
    <string name="string_comic_details_status_text">状态：%s</string>
    <string name="string_comic_details_last_update_time_text">最后更新于：%s</string>
    <string name="string_comic_details_last_chapter_text">更新至：%s</string>
    <string name="string_comic_details_authors_text">作者：%s</string>
    <string name="string_desc_title_text">标题：%s</string>
    <string name="string_desc_intro_text">简介：%s</string>
    <string name="string_seekbar_cur_page_text">curPage</string>
    <string name="string_seekbar_max_page">maxPage</string>
    <string name="string_reader_title_text">Title</string>
    <string name="string_reader_more_actions_text">More</string>
    <string name="string_reader_bottom_time_text">Time</string>
    <string name="string_reader_bottom_network_text">Network</string>
    <string name="string_reader_bottom_page_text">%1$d/%2$d</string>
    <string name="string_reader_bottom_chapter_text">Chapter</string>
    <string name="string_drawer_comic_title_text">漫画标题：</string>
    <string name="string_drawer_comic_title_content">Comic Title</string>
    <string name="string_drawer_chapter_title_content">Chapter Title</string>
    <string name="string_drawer_comic_chapter_title_text">章节标题：</string>
    <string name="string_drawer_update_time_content">Update Time</string>
    <string name="string_drawer_update_time_text">更新时间：</string>
    <string name="string_drawer_translator_text">汉化翻译：</string>
    <string name="string_drawer_comic_translator_content">Comic Translator</string>
    <string name="string_comic_item_finish_text">完</string>
    <string name="string_chapter_info_brief_intro_title_text">简介</string>
</resources>