<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom|end"
    android:background="@color/colorBlackAA">

    <TextView
        android:id="@+id/tv_reader_bottom_chapter"
        style="@style/ReaderBottomTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingStart="4dp"
        android:paddingEnd="2dp"
        android:text="@string/string_reader_bottom_chapter_text"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_reader_bottom_page"
        style="@style/ReaderBottomTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingStart="2dp"
        android:paddingEnd="2dp"
        android:text="@string/string_reader_bottom_page_text"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_reader_bottom_chapter" />

    <TextView
        android:id="@+id/tv_reader_bottom_network"
        style="@style/ReaderBottomTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingStart="2dp"
        android:paddingEnd="2dp"
        android:text="@string/string_reader_bottom_network_text"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_reader_bottom_page" />

    <TextView
        android:id="@+id/tv_reader_bottom_time"
        style="@style/ReaderBottomTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingStart="2dp"
        android:paddingEnd="4dp"
        android:text="@string/string_reader_bottom_time_text"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_reader_bottom_network" />
</androidx.constraintlayout.widget.ConstraintLayout>