<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/reader_actions_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimaryDark"
        android:elevation="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/ib_reader_back"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="?attr/actionBarSize"
            android:layout_height="?attr/actionBarSize"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            app:srcCompat="@drawable/ic_arrow_back_24" />

        <TextView
            android:id="@+id/tv_reader_title"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:maxLines="1"
            android:padding="8dp"
            android:text="@string/string_reader_title_text"
            android:textAppearance="@style/ToolbarTitleTextStyle"
            android:textColor="@color/colorBlackText" />

        <Button
            android:id="@+id/btn_reader_more_actions"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:fontFamily="@font/rubik"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/string_reader_more_actions_text"
            android:textColor="@color/colorBlackText"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimaryDark"
        android:elevation="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/tv_seekbar_cur_page"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:padding="16dp"
            android:text="@string/string_seekbar_cur_page_text"
            android:textAppearance="@style/ToolbarTitleTextStyle"
            android:textColor="@color/colorBlackText" />

        <SeekBar
            android:id="@+id/sb_reader_progress"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/tv_seekbar_max_page"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:padding="16dp"
            android:text="@string/string_seekbar_max_page"
            android:textAppearance="@style/ToolbarTitleTextStyle"
            android:textColor="@color/colorBlackText" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>