<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="168dp"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?attr/selectableItemBackground"
    android:layout_margin="4dp"
    app:cardElevation="4dp"
    app:cardCornerRadius="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/iv_cover"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/tv_comic_author"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="2dp"
            android:background="@color/colorBlackAA"
            style="@style/ComicItemTextStyle"
            android:gravity="center"
            android:maxLines="1"
            android:text="@string/string_tv_comic_title"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toBottomOf="@+id/iv_cover"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tv_comic_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingStart="2dp"
            android:background="@color/colorBlackAA"
            style="@style/ComicItemTextStyle"
            android:gravity="center"
            android:paddingBottom="2dp"
            android:paddingEnd="2dp"
            android:paddingTop="2dp"
            android:maxLines="1"
            android:text="@string/string_tv_comic_author"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toTopOf="@+id/tv_comic_author"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tv_finished"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:background="@color/colorBlackAA"
            android:gravity="center"
            style="@style/ToolbarTitleTextStyle"
            android:text="@string/string_comic_item_finish_text"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toTopOf="@+id/tv_comic_title"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>